# sensivalidate

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
sensivalidate/: main.py
src/sensivalidate_rootifera/: __init__.py
